# rust_aliasmethod

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: errors.rs  lib.rs  table.rs
tests/: lib.rs
