[package]
name = "aliasmethod"
version = "0.4.0"
authors = ["Tomochika Hara <rust@thara.dev>"]
description = "Implementation of Walker's Alias method."
homepage = "https://github.com/thara/rust_aliasmethod"
repository = "https://github.com/thara/rust_aliasmethod"
readme = "README.md"
keywords = ["aliasmethod", "random", "sampling", "algorithm"]
license-file = "LICENSE"
edition = "2018"

[dependencies]
rand = "0.7"
